# git-heatmap

./: .clang-format  .clangd  .cursorignore  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/toolchains/: windows.cmake
src/: args.cpp  args.h  debug.h  git_analyzer.cpp  git_analyzer.h  git_heatmap.cpp  git_heatmap.h  git_utils.h  glob.cpp  glob.h  heatmap.cpp  heatmap.h  main.cpp  terminal.cpp  terminal.h  time_utils.cpp  time_utils.h  utils.cpp  utils.h
